name:               lanyon-hakyll
version:            0.1.0.0
homepage:            https://github.com/hahey/lanyon-hakyll#readme
license:             MIT
author:              Heuna Kim
maintainer:          heynaheyna9@gmail.com
copyright:           2020 Heuna Kim
category:            Web
build-type:         Simple
extra-source-files:  README.md
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
  ghc-options:      -threaded
  default-language: Haskell2010
